todo/data/creduce/creduce_n/482/swarm/r3/cb3/9987.c-482-3.err
/project/alipour/rabin/kconfig/data/creduce_n/482/swarm/r3/cb3/9987.c: In function ‘func_45.isra.10’:
/project/alipour/rabin/kconfig/data/creduce_n/482/swarm/r3/cb3/9987.c:1991:1: error: unrecognizable insn:
 }
 ^
(insn 594 593 595 64 (set (reg:QI 533)
        (const_int 250 [0xfa])) /project/alipour/rabin/kconfig/data/creduce_n/482/swarm/r3/cb3/9987.c:1943 -1
     (nil))
/project/alipour/rabin/kconfig/data/creduce_n/482/swarm/r3/cb3/9987.c:1991:1: internal compiler error: in extract_insn, at recog.c:2154
0xc05df8 _fatal_insn(char const*, rtx_def const*, char const*, int, char const*)
	../../gcc/rtl-error.c:109
0xc05e4b _fatal_insn_not_found(rtx_def const*, char const*, int, char const*)
	../../gcc/rtl-error.c:117
0xb8b99a extract_insn(rtx_def*)
	../../gcc/recog.c:2154
0x8fec83 instantiate_virtual_regs_in_insn
	../../gcc/function.c:1561
0x90088c instantiate_virtual_regs
	../../gcc/function.c:1928
Please submit a full bug report,
with preprocessed source if appropriate.
Please include the complete backtrace with any bug report.
See <http://gcc.gnu.org/bugs.html> for instructions.
